fix : soal hanya 4
Signed-off-by: Alfi Filsafalasafi <filsafalasafi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -139,30 +139,48 @@
 
     <script>
       // Soal dan jawaban (konversi desimal ke biner)
+      // const questions = [
+      //   "10   12",
+      //   "101  110",
+      //   "17   36",
+      //   "18   30",
+      //   "19   24",
+      //   "20   22",
+      //   "11001     11011",
+      //   "100001    11100",
+      //   "10111    10101",
+      //   "11101     11000",
+      // ];
+
+      // const answers = [
+      //   "10101100",
+      //   "56",
+      //   "10001100100",
+      //   "1001011110",
+      //   "1001111000",
+      //   "1010010110",
+      //   "2527",
+      //   "3328",
+      //   "2321",
+      //   "2924",
+      // ];
+
       const questions = [
         "10   12",
         "101  110",
-        "17   36",
-        "18   30",
         "19   24",
         "20   22",
         "11001     11011",
         "100001    11100",
-        "10111    10101",
-        "11101     11000",
       ];
 
       const answers = [
         "10101100",
         "56",
-        "10001100100",
-        "1001011110",
         "1001111000",
         "1010010110",
         "2527",
         "3328",
-        "2321",
-        "2924",
       ];
 
       let current = 0;
